# 7T_funcproc

./: .gitignore  README.md  environment.yml  pyproject.toml
funcproc/: __init__.py  __main__.py  cli.py
funcproc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
funcproc/commands/: __init__.py  denoise.py  prf.py
funcproc/configs/: example_config.yml
funcproc/core/: __init__.py  bids.py  config.py  io.py  prf_data.py  prf_fit.py  prf_plot.py  pybest.py  unzscore.py  utils.py
