[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funcproc"
version = "0.0.1"
description = "Functional (BOLD) analysis on fMRIPrep outputs for the 7T pipeline: denoising and pRF fitting."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pyyaml",
    "nibabel",
    "joblib",
    # pybest (gjheij fork) imports these but doesn't declare them all:
    "scikit-learn",
    "click",
    "tqdm",
    "h5py",
    "toml",
    "nilearn==0.11.1",
    # source-only packages (installed straight from git):
    "prfpy @ git+https://github.com/VU-Cog-Sci/prfpy.git",
    "pybest @ git+https://github.com/gjheij/pybest.git",
]

[project.scripts]
funcproc = "funcproc.cli:main"

[tool.setuptools.packages.find]
include = ["funcproc*"]

[tool.setuptools.package-data]
funcproc = ["vendor/**/*"]